--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -18,7 +18,7 @@
 	color: var(--color-text);
 }
 
-body {
+/* body {
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
@@ -31,7 +31,8 @@ body {
 		),
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
-
+ */
+ 
 h1,
 h2,
 p {
